examples/legacy/invalid_scl/dup_input.scl
input path(usize, usize)
input path(usize)
